# rust-photoacoustic

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE.md  MEMORY.md  README.md  TODO.md  build.rs  config.example.yaml  config.yaml.example  count_lines.sh  photoacoustic.code-workspace  t.json
rust/: .dockerignore  .gitignore  Cargo.toml  README.md  action.py  build.rs  cobertura.xml  config.example.yaml  curl-auth  curl-auth.ps1  final_test_report.html  scipy_bandpass_filter.py  scipy_bandpass_filter_optimized.py  test_bandpass_comparison.rs  test_http_driver.rs  test_redis_driver_direct.rs  test_redis_reconnection.rs
rust/.cargo/: config.toml
rust/auth-macros/: Cargo.toml  README.md  lib.rs_wip
rust/auth-macros/src/: lib.rs
rust/docker/: Dockerfile  Dockerfile.alpine-3.23  Dockerfile.alpine-3.23-static-deps  Dockerfile.alpine-3.23-static-python  Dockerfile.app  Dockerfile.deps  Dockerfile.multiarch  Dockerfile.python  Dockerfile.rpi64  Dockerfile.static_musl_app  Dockerfile.static_musl_deps  Dockerfile.static_musl_python  Dockerfile.trixie  Setup.local  remove_auto_initialize.py  static-modules.diff  test_uuid.c  uuid-patch.diff
rust/docker/remove-auto-init/: Cargo.toml
rust/docker/remove-auto-init/src/: main.rs
rust/docs/: record_node_guide.md
rust/docs_conception_fr/: acquisition_daemon_guide.md  audio_streaming_architecture.md  audio_streaming_integration_guide.md  microphone_streaming_fix_summary.md  rust_patterns_guide.md
rust/examples/: config_hot_reload_demo.rs  modbus_client.rs  multi_instance_concentration_demo.rs  record_node_config.yaml  record_node_test.rs  system_stats_example.rs  test_audio_sources.rs  test_chunk_timing.rs  test_performance_summary_compatibility.rs  test_processing_statistics.rs  test_serializable_graph.rs  test_streaming_continuity.rs  universal_display_examples.rs  use_config.rs
rust/python/: gen_bandpass_reference_values.py
rust/resources/: .gitignore  config.schema.json
rust/resources/forms/: consent.hbs  login.hbs
rust/resources/rapidoc_helper/: index.html  index.ts  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  webpack.config.cjs
rust/resources/rapidoc_helper/public/: openapi.json
rust/resources/rapidoc_helper/src/: httpsnippet.test.ts  httpsnippet.ts  openapi-description-fixer.ts  openapi-snippets.ts  openapi-to-har.ts  sctg-rapidoc.d.ts  stringify-object.d.ts
rust/resources/rapidoc_helper/tests/: rapidoc-shadow-dom.spec.ts  rapidoc.spec.ts  webpack-serve-debug.spec.ts
rust/scripts/: install_rust_photoacoustic_service.sh
rust/src/: build_info.rs  lib.rs  main.rs  system_stats.rs
rust/src/acquisition/: daemon.rs  file.rs  microphone.rs  mock.rs  mock_microphone.rs  mod.rs  realtime_daemon.rs  record_consumer.rs  simulated_photoacoustic.rs  stream.rs
rust/src/config/: access.rs  acquisition.rs  generix.rs  mod.rs  modbus.rs  photoacoustic.rs  processing.rs  simulated_source.rs  thermal_regulation.rs  utils.rs  visualization.rs
rust/src/daemon/: launch_daemon.rs  launch_daemon.rs.backup  mod.rs
rust/src/modbus/: mod.rs  modbus_server.rs
rust/src/photoacoustic/: mod.rs
rust/src/preprocessing/: differential.rs  differential_test.rs  filters.rs  filters_test.rs  mod.rs
rust/src/preprocessing/filter/: mod.rs  scipy_butter_filter.rs  scipy_butter_filters.rs  scipy_cauer_filter.rs  scipy_cheby_filter.rs  scipy_iir_filters.rs  standard_filters.rs
rust/src/processing/: consumer.rs  graph.rs  mod.rs  nodes.rs  result.rs
rust/src/processing/computing_nodes/: action_trait.rs  concentration.rs  example_display_action.rs  mod.rs  peak_finder.rs  universal_action.rs  universal_display_action.rs
rust/src/processing/nodes/: channel.rs  data.rs  differential.rs  filter.rs  gain.rs  input.rs  mod.rs  output.rs  python.rs  record.rs  streaming.rs  streaming_registry.rs  traits.rs
rust/src/spectral/: fft.rs  mod.rs
rust/src/thermal_regulation/: controller.rs  daemon.rs  mod.rs  shared_state.rs  simulation.rs
rust/src/thermal_regulation/drivers/: cp2112.rs  mock.rs  mod.rs  native.rs
rust/src/utility/: certificate_utilities.rs  data_source.rs  jwt_token.rs  mod.rs  noise_generator.rs  noise_generator_test.rs  temperature_conversion.rs
rust/src/utility/cpal/: list.rs  mod.rs
rust/src/visualization/: api.rs  api_auth.rs  audio_streaming.rs  introspection.rs  mod.rs  oauth_guard.rs  oidc.rs  oidc_auth.rs  pwhash.rs  request_guard.rs  server.rs  shared_state.rs  user_info_reponse.rs  vite_dev_proxy.rs
rust/src/visualization/api/: mod.rs  test.rs
rust/src/visualization/auth/: mod.rs
rust/src/visualization/jwt/: jwt_extension.rs  jwt_keys.rs  mod.rs  responses.rs  token_entry.rs
rust/src/visualization/oidc_auth/: auth.rs  consent.rs  forms.rs  handlers.rs  mod.rs  state.rs
rust/src/visualization/server/: builder.rs  cors.rs  handlers.rs  mod.rs  proxy.rs
rust/src/visualization/streaming/: audio.rs  mod.rs
rust/tests/: access_config_hot_reload_test.rs  action_api_test.rs  api_endpoints_integration_test.rs  api_jwt_test.rs  bandpass_scipy_filter_validation_test.rs  computing_api_test.rs  concentration_node_test.rs  config_test.rs  debug_cert.yml  debug_test.rs  graph_serialization_compatibility_test.rs  integration_config_hot_reload.rs  integration_highpass_filter.rs  introspection_test_fixed.rs  logout_flow_test.rs  macro_integration_test.rs  multi_instance_integration_test.rs  multi_peak_finder_test.rs  openapi_cli_vs_server_test.rs  openapi_route_root_test.rs  openapi_test.rs  openapi_visualization_endpoints_test.rs  python_integration_tests.rs  python_node_integration_test.rs  rapidoc_e2e_test.rs  rapidoc_playwright_test.rs  real_world_modbus_test.rs  real_world_peak_endpoint_test.rs  redis_integration_ci_test.rs  redis_integration_test.rs  redis_unit_test.rs  rocket_compression.rs  rs256_jwt_test.rs  rs256_pkce_flow_test.rs  server_test_only.rs  supports_hot_reload_serialization_test.rs
rust/tests/data/: bandpass_reference_values.json
rust/tests/test_scripts/: advanced_action.py  simple_action.py
(+274 files in other folders)
