[package]
name = "auth-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
# Dependencies for OpenAPI integration
rocket_okapi_codegen = { path = "../okapi-patched/rocket-okapi-codegen" }
rocket_okapi = { path = "../okapi-patched/rocket-okapi" }
