[package]
name = "auth-macros"
authors = ["Ronan Le Meillat"]
license = "SCTG-Non-Commercial-1.0"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# Dependencies for OpenAPI integration
rocket_okapi_codegen = { workspace = true }
rocket_okapi = { workspace = true }
